# typed-admin-firestore

./: .gitignore  .npmignore  Cargo.toml  README.md  index.d.ts  package-lock.json  package.json  sample.ts  tsconfig.json
.github/: dependabot.yml
.github/workflows/: main.yml
src/: main.rs
