[package]
name = "typed-admin-firestore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_ast = "0.24.0"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.69"
reqwest = "0.11.14"
thiserror = "1.0.38"
